testdata/zkc/invalid/constant_invalid_02.zkc
;;error:2:21-24:bit overflow (u9 into u8)
constant u8 LARGE = 255
constant u8 LARGEPO = LARGE+1
